# NeuralNetIntAddition

./: .gitignore  CMakeLists.txt  NeuralNetIntAddition.cbp  README.md
src/: errorhandling.h  main.cpp  main.cu  neuralnet.h  neuralnetlayer.hpp
src/cudnnnetwork/: cudnnlayer_t.cu  cudnnlayer_t.cuh  neuralnetbase.cu  neuralnetbase.cuh  neuralnettrainer.cu  neuralnettrainer.cuh
src/cutools/: cublashosttools.cuh  cudadevicestools.cuh  cudadevicetools.cu  cudadevicetools.cuh  cudaerrorhandling.cuh  cudahosttools.cuh  cudnnlayer_t.cu  cudnnlayer_t.cuh  curandhosttools.cuh  neuralnetbase.cu  neuralnetbase.cuh
src/tools/: binaryconversion.hpp  csvreader.hpp  micro_timer.h  random.hpp  tools.hpp
